--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "quanco",
   "version": "1.0.0",
   "description": "<img src=\"https://github.com/c44rson/Quanco/blob/main/docs/QuancoLogo.png\" alt=\"Quanco Logo\" width=\"400\" height=\"400\">",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/quanco.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test test/**/*.test.js"
   },
   "keywords": [],
   "author": "",
