--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "c8": "^10.1.3"
+  },
+  "dependencies": {
+    "graph-stringify": "^1.1.0",
+    "ohm-js": "^17.1.0"
   }
 }
